# first-course

./: diagram.puml  pyproject.toml  Курсова робота Ничик Олександр Олегович ІА-33.docx
app/: main.py  settings.py
app/front/html/: base.html  create-flats.html  flats.html  index.html  login.html  profile-red.html  profile.html  registration.html
app/front/static/scripts/: script.js
app/front/static/styles/: create-flats-styles.css  flats-styles.css  login-styles.css  main-styles.css  register-styles.css
app/services/: connection.py  repositoryflat.py  repositoryuser.py  security.py
app/services/models/: flat.py  requests.py  user.py
app/services/types/: base.py  flatfilters.py  schema.py
